<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <include
                android:id="@+id/includeMain"
                layout="@layout/activity_main_action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/ic_registration"
                android:fontFamily="sans-serif-medium"
                android:paddingRight="40dp"
                android:text="@string/register_movie_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/displayBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/ic_display"
                android:fontFamily="sans-serif-medium"
                android:paddingRight="40dp"
                android:text="@string/display_movies_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/favouriteBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/ic_favourite"
                android:fontFamily="sans-serif-medium"
                android:paddingRight="50dp"
                android:text="@string/favourite_movies_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/editBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/ic_edit"
                android:fontFamily="sans-serif-medium"
                android:paddingRight="40dp"
                android:text="@string/edit_movies_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/ic_search"
                android:fontFamily="sans-serif-medium"
                android:paddingRight="50dp"
                android:text="@string/search_movie_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <Button
                android:id="@+id/ratingBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/ic_ratings"
                android:fontFamily="sans-serif-medium"
                android:paddingRight="45dp"
                android:text="@string/rating_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>