<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page"
    tools:context=".SearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/searchLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/includeSearch"
                layout="@layout/activity_search_action_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/searchText"
                    android:layout_width="300dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/customize_notify_text"
                    android:ems="10"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:hint="@string/search_hint_text"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/blue_850"
                    android:textColorHint="@color/black_850"
                    android:textCursorDrawable="@color/blue_850"
                    android:textSize="18sp"
                    tools:ignore="LabelFor,RtlHardcoded" />

                <ImageButton
                    android:id="@+id/searchBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/customize_edit_text"
                    android:contentDescription="@string/search_lookup"
                    android:fontFamily="sans-serif-medium"
                    android:src="@drawable/ic_search"
                    android:text="@string/display_add_to_fav"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/searchEmptyNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/customize_notify_text"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/search_no_match"
                android:textColor="@color/red_700"
                android:textSize="18sp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/searchDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>